lib/mapping/antlr4/mappingParser.dart
// Generated from mapping.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'mappingVisitor.dart';
import 'mappingBaseVisitor.dart';
const int RULE_structureMap = 0, RULE_identifier = 1, RULE_mapId = 2, RULE_url = 3, 
          RULE_structure = 4, RULE_structureAlias = 5, RULE_imports = 6, 
          RULE_const = 7, RULE_rules = 8, RULE_group = 9, RULE_typeMode = 10, 
          RULE_extends = 11, RULE_parameters = 12, RULE_parameter = 13, 
          RULE_type = 14, RULE_mappingRule = 15, RULE_ruleName = 16, RULE_ruleSources = 17, 
          RULE_ruleSource = 18, RULE_ruleTargets = 19, RULE_sourceType = 20, 
          RULE_sourceCardinality = 21, RULE_upperBound = 22, RULE_ruleCtx = 23, 
          RULE_sourceDefault = 24, RULE_alias = 25, RULE_whereClause = 26, 
          RULE_checkClause = 27, RULE_log = 28, RULE_dependent = 29, RULE_ruleTarget = 30, 
          RULE_transform = 31, RULE_invocation = 32, RULE_paramList = 33, 
          RULE_param = 34, RULE_fhirPath = 35, RULE_literal = 36, RULE_groupTypeMode = 37, 
          RULE_sourceListMode = 38, RULE_targetListMode = 39, RULE_inputMode = 40, 
          RULE_modelMode = 41;
class mappingParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_T__2 = 3, TOKEN_T__3 = 4, 
                   TOKEN_T__4 = 5, TOKEN_T__5 = 6, TOKEN_T__6 = 7, TOKEN_T__7 = 8, 
                   TOKEN_T__8 = 9, TOKEN_T__9 = 10, TOKEN_T__10 = 11, TOKEN_T__11 = 12, 
                   TOKEN_T__12 = 13, TOKEN_T__13 = 14, TOKEN_T__14 = 15, 
                   TOKEN_T__15 = 16, TOKEN_T__16 = 17, TOKEN_T__17 = 18, 
                   TOKEN_T__18 = 19, TOKEN_T__19 = 20, TOKEN_T__20 = 21, 
                   TOKEN_T__21 = 22, TOKEN_T__22 = 23, TOKEN_T__23 = 24, 
                   TOKEN_T__24 = 25, TOKEN_T__25 = 26, TOKEN_T__26 = 27, 
                   TOKEN_T__27 = 28, TOKEN_T__28 = 29, TOKEN_T__29 = 30, 
                   TOKEN_T__30 = 31, TOKEN_T__31 = 32, TOKEN_T__32 = 33, 
                   TOKEN_T__33 = 34, TOKEN_T__34 = 35, TOKEN_T__35 = 36, 
                   TOKEN_T__36 = 37, TOKEN_T__37 = 38, TOKEN_T__38 = 39, 
                   TOKEN_T__39 = 40, TOKEN_BOOL = 41, TOKEN_DATE = 42, TOKEN_DATETIME = 43, 
                   TOKEN_TIME = 44, TOKEN_ID = 45, TOKEN_IDENTIFIER = 46, 
                   TOKEN_DELIMITEDIDENTIFIER = 47, TOKEN_QUOTEDIDENTIFIER = 48, 
                   TOKEN_STRING = 49, TOKEN_INTEGER = 50, TOKEN_NUMBER = 51, 
                   TOKEN_WS = 52, TOKEN_COMMENT = 53, TOKEN_LINE_COMMENT = 54;

  @override
  final List<String> ruleNames = [
    'structureMap', 'identifier', 'mapId', 'url', 'structure', 'structureAlias', 
    'imports', 'const', 'rules', 'group', 'typeMode', 'extends', 'parameters', 
    'parameter', 'type', 'mappingRule', 'ruleName', 'ruleSources', 'ruleSource', 
    'ruleTargets', 'sourceType', 'sourceCardinality', 'upperBound', 'ruleCtx', 
    'sourceDefault', 'alias', 'whereClause', 'checkClause', 'log', 'dependent', 
    'ruleTarget', 'transform', 'invocation', 'paramList', 'param', 'fhirPath', 
    'literal', 'groupTypeMode', 'sourceListMode', 'targetListMode', 'inputMode', 
    'modelMode'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'map'", "'='", "'uses'", "'as'", "'alias'", "'imports'", "'let'", 
      "';'", "'{'", "'}'", "'group'", "'<<'", "'>>'", "'extends'", "'('", 
      "','", "')'", "':'", "'->'", "'..'", "'*'", "'.'", "'default'", "'where'", 
      "'check'", "'log'", "'then'", "'types'", "'type+'", "'first'", "'not_first'", 
      "'last'", "'not_last'", "'only_one'", "'share'", "'single'", "'source'", 
      "'target'", "'queried'", "'produced'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, "BOOL", "DATE", "DATETIME", 
      "TIME", "ID", "IDENTIFIER", "DELIMITEDIDENTIFIER", "QUOTEDIDENTIFIER", 
      "STRING", "INTEGER", "NUMBER", "WS", "COMMENT", "LINE_COMMENT"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'mapping.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  mappingParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  StructureMapContext structureMap() {
    dynamic _localctx = StructureMapContext(context, state);
    enterRule(_localctx, 0, RULE_structureMap);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 87;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__0) {
        state = 84;
        mapId();
        state = 89;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 93;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__2) {
        state = 90;
        structure();
        state = 95;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 99;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__5) {
        state = 96;
        imports();
        state = 101;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 105;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__6) {
        state = 102;
        const_();
        state = 107;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 109; 
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      do {
        state = 108;
        group();
        state = 111; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      } while (_la == TOKEN_T__10);
      state = 113;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  IdentifierContext identifier() {
    dynamic _localctx = IdentifierContext(context, state);
    enterRule(_localctx, 2, RULE_identifier);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 115;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_IDENTIFIER || _la == TOKEN_DELIMITEDIDENTIFIER)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MapIdContext mapId() {
    dynamic _localctx = MapIdContext(context, state);
    enterRule(_localctx, 4, RULE_mapId);
    try {
      enterOuterAlt(_localctx, 1);
      state = 117;
      match(TOKEN_T__0);
      state = 118;
      url();
      state = 119;
      match(TOKEN_T__1);
      state = 120;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  UrlContext url() {
    dynamic _localctx = UrlContext(context, state);
    enterRule(_localctx, 6, RULE_url);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 122;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_DELIMITEDIDENTIFIER || _la == TOKEN_QUOTEDIDENTIFIER)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StructureContext structure() {
    dynamic _localctx = StructureContext(context, state);
    enterRule(_localctx, 8, RULE_structure);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 124;
      match(TOKEN_T__2);
      state = 125;
      url();
      state = 127;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__4) {
        state = 126;
        structureAlias();
      }

      state = 129;
      match(TOKEN_T__3);
      state = 130;
      modelMode();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StructureAliasContext structureAlias() {
    dynamic _localctx = StructureAliasContext(context, state);
    enterRule(_localctx, 10, RULE_structureAlias);
    try {
      enterOuterAlt(_localctx, 1);
      state = 132;
      match(TOKEN_T__4);
      state = 133;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportsContext imports() {
    dynamic _localctx = ImportsContext(context, state);
    enterRule(_localctx, 12, RULE_imports);
    try {
      enterOuterAlt(_localctx, 1);
      state = 135;
      match(TOKEN_T__5);
      state = 136;
      url();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ConstContext const_() {
    dynamic _localctx = ConstContext(context, state);
    enterRule(_localctx, 14, RULE_const);
    try {
      enterOuterAlt(_localctx, 1);
      state = 138;
      match(TOKEN_T__6);
      state = 139;
      match(TOKEN_ID);
      state = 140;
      match(TOKEN_T__1);
      state = 141;
      fhirPath();
      state = 142;
      match(TOKEN_T__7);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RulesContext rules() {
    dynamic _localctx = RulesContext(context, state);
    enterRule(_localctx, 16, RULE_rules);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 144;
      match(TOKEN_T__8);
      state = 148;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_IDENTIFIER || _la == TOKEN_DELIMITEDIDENTIFIER) {
        state = 145;
        mappingRule();
        state = 150;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 151;
      match(TOKEN_T__9);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  GroupContext group() {
    dynamic _localctx = GroupContext(context, state);
    enterRule(_localctx, 18, RULE_group);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 153;
      match(TOKEN_T__10);
      state = 154;
      match(TOKEN_ID);
      state = 155;
      parameters();
      state = 157;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__13) {
        state = 156;
        extends_();
      }

      state = 160;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__11) {
        state = 159;
        typeMode();
      }

      state = 162;
      rules();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TypeModeContext typeMode() {
    dynamic _localctx = TypeModeContext(context, state);
    enterRule(_localctx, 20, RULE_typeMode);
    try {
      enterOuterAlt(_localctx, 1);
      state = 164;
      match(TOKEN_T__11);
      state = 165;
      groupTypeMode();
      state = 166;
      match(TOKEN_T__12);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExtendsContext extends_() {
    dynamic _localctx = ExtendsContext(context, state);
    enterRule(_localctx, 22, RULE_extends);
    try {
      enterOuterAlt(_localctx, 1);
      state = 168;
      match(TOKEN_T__13);
      state = 169;
      match(TOKEN_ID);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ParametersContext parameters() {
    dynamic _localctx = ParametersContext(context, state);
    enterRule(_localctx, 24, RULE_parameters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 171;
      match(TOKEN_T__14);
      state = 172;
      parameter();
      state = 175; 
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      do {
        state = 173;
        match(TOKEN_T__15);
        state = 174;
        parameter();
        state = 177; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      } while (_la == TOKEN_T__15);
      state = 179;
      match(TOKEN_T__16);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ParameterContext parameter() {
    dynamic _localctx = ParameterContext(context, state);
    enterRule(_localctx, 26, RULE_parameter);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 181;
      inputMode();
      state = 182;
      match(TOKEN_ID);
      state = 184;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__17) {
        state = 183;
        type();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TypeContext type() {
    dynamic _localctx = TypeContext(context, state);
    enterRule(_localctx, 28, RULE_type);
    try {
      enterOuterAlt(_localctx, 1);
      state = 186;
      match(TOKEN_T__17);
      state = 187;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MappingRuleContext mappingRule() {
    dynamic _localctx = MappingRuleContext(context, state);
    enterRule(_localctx, 30, RULE_mappingRule);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 189;
      ruleSources();
      state = 192;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__18) {
        state = 190;
        match(TOKEN_T__18);
        state = 191;
        ruleTargets();
      }

      state = 195;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__26) {
        state = 194;
        dependent();
      }

      state = 198;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_ID) {
        state = 197;
        ruleName();
      }

      state = 200;
      match(TOKEN_T__7);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleNameContext ruleName() {
    dynamic _localctx = RuleNameContext(context, state);
    enterRule(_localctx, 32, RULE_ruleName);
    try {
      enterOuterAlt(_localctx, 1);
      state = 202;
      match(TOKEN_ID);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleSourcesContext ruleSources() {
    dynamic _localctx = RuleSourcesContext(context, state);
    enterRule(_localctx, 34, RULE_ruleSources);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 204;
      ruleSource();
      state = 209;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__15) {
        state = 205;
        match(TOKEN_T__15);
        state = 206;
        ruleSource();
        state = 211;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleSourceContext ruleSource() {
    dynamic _localctx = RuleSourceContext(context, state);
    enterRule(_localctx, 36, RULE_ruleSource);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 212;
      ruleCtx();
      state = 214;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__17) {
        state = 213;
        sourceType();
      }

      state = 217;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_INTEGER) {
        state = 216;
        sourceCardinality();
      }

      state = 220;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__22) {
        state = 219;
        sourceDefault();
      }

      state = 223;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 33285996544) != 0)) {
        state = 222;
        sourceListMode();
      }

      state = 226;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__3) {
        state = 225;
        alias();
      }

      state = 229;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__23) {
        state = 228;
        whereClause();
      }

      state = 232;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__24) {
        state = 231;
        checkClause();
      }

      state = 235;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_T__25) {
        state = 234;
        log();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleTargetsContext ruleTargets() {
    dynamic _localctx = RuleTargetsContext(context, state);
    enterRule(_localctx, 38, RULE_ruleTargets);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 237;
      ruleTarget();
      state = 242;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__15) {
        state = 238;
        match(TOKEN_T__15);
        state = 239;
        ruleTarget();
        state = 244;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SourceTypeContext sourceType() {
    dynamic _localctx = SourceTypeContext(context, state);
    enterRule(_localctx, 40, RULE_sourceType);
    try {
      enterOuterAlt(_localctx, 1);
      state = 245;
      match(TOKEN_T__17);
      state = 246;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SourceCardinalityContext sourceCardinality() {
    dynamic _localctx = SourceCardinalityContext(context, state);
    enterRule(_localctx, 42, RULE_sourceCardinality);
    try {
      enterOuterAlt(_localctx, 1);
      state = 248;
      match(TOKEN_INTEGER);
      state = 249;
      match(TOKEN_T__19);
      state = 250;
      upperBound();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  UpperBoundContext upperBound() {
    dynamic _localctx = UpperBoundContext(context, state);
    enterRule(_localctx, 44, RULE_upperBound);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 252;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_T__20 || _la == TOKEN_INTEGER)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleCtxContext ruleCtx() {
    dynamic _localctx = RuleCtxContext(context, state);
    enterRule(_localctx, 46, RULE_ruleCtx);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 254;
      identifier();
      state = 259;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__21) {
        state = 255;
        match(TOKEN_T__21);
        state = 256;
        identifier();
        state = 261;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SourceDefaultContext sourceDefault() {
    dynamic _localctx = SourceDefaultContext(context, state);
    enterRule(_localctx, 48, RULE_sourceDefault);
    try {
      enterOuterAlt(_localctx, 1);
      state = 262;
      match(TOKEN_T__22);
      state = 263;
      match(TOKEN_T__14);
      state = 264;
      fhirPath();
      state = 265;
      match(TOKEN_T__16);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AliasContext alias() {
    dynamic _localctx = AliasContext(context, state);
    enterRule(_localctx, 50, RULE_alias);
    try {
      enterOuterAlt(_localctx, 1);
      state = 267;
      match(TOKEN_T__3);
      state = 268;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  WhereClauseContext whereClause() {
    dynamic _localctx = WhereClauseContext(context, state);
    enterRule(_localctx, 52, RULE_whereClause);
    try {
      enterOuterAlt(_localctx, 1);
      state = 270;
      match(TOKEN_T__23);
      state = 271;
      match(TOKEN_T__14);
      state = 272;
      fhirPath();
      state = 273;
      match(TOKEN_T__16);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CheckClauseContext checkClause() {
    dynamic _localctx = CheckClauseContext(context, state);
    enterRule(_localctx, 54, RULE_checkClause);
    try {
      enterOuterAlt(_localctx, 1);
      state = 275;
      match(TOKEN_T__24);
      state = 276;
      match(TOKEN_T__14);
      state = 277;
      fhirPath();
      state = 278;
      match(TOKEN_T__16);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LogContext log() {
    dynamic _localctx = LogContext(context, state);
    enterRule(_localctx, 56, RULE_log);
    try {
      enterOuterAlt(_localctx, 1);
      state = 280;
      match(TOKEN_T__25);
      state = 281;
      match(TOKEN_T__14);
      state = 282;
      fhirPath();
      state = 283;
      match(TOKEN_T__16);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DependentContext dependent() {
    dynamic _localctx = DependentContext(context, state);
    enterRule(_localctx, 58, RULE_dependent);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 285;
      match(TOKEN_T__26);
      state = 298;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_IDENTIFIER:
      case TOKEN_DELIMITEDIDENTIFIER:
        state = 286;
        invocation();
        state = 291;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_T__15) {
          state = 287;
          match(TOKEN_T__15);
          state = 288;
          invocation();
          state = 293;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 295;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__8) {
          state = 294;
          rules();
        }

        break;
      case TOKEN_T__8:
        state = 297;
        rules();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RuleTargetContext ruleTarget() {
    dynamic _localctx = RuleTargetContext(context, state);
    enterRule(_localctx, 60, RULE_ruleTarget);
    int _la;
    try {
      state = 315;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 32, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 300;
        ruleCtx();
        state = 303;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__1) {
          state = 301;
          match(TOKEN_T__1);
          state = 302;
          transform();
        }

        state = 306;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_T__3) {
          state = 305;
          alias();
        }
